Add win screen transition and functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         	</div>
         </section>
 
+        <div class = "winScreen ">
+            <h1>You win</h1>
+            <button class="plyBtn">Play Again</button>
+        </div>
+
         <ul class="deck">
             <li class="card">
                 <i class="fa fa-diamond"></i>
