Added timer object and functionality to game

--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
-        	</div>
+            </div>
+            <div class="timer"><time>00:00:00</time>
+            </div>
         </section>
 
         <div class = "winScreen ">
-            <h1>You win</h1>
+            <h1>You win!</h1>
+            <h2 class="winTime"></h2>
             <button class="plyBtn">Play Again</button>
         </div>
 
