add game life count functionality

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
         </section>
 
-        <div class = "winScreen ">
-            <h1>You win!</h1>
+        <div class = "winLoseScreen">
+            <h1 class="winLoseNotification"></h1>
             <h2 class="winTime"></h2>
             <button class="plyBtn">Play Again</button>
         </div>
